# qliphoth

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONCLAVE.sigil  CONTRIBUTING.md  LESSONS-LEARNED.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  Sigil.toml  TODO.md  package-lock.json  package.json  playwright.config.ts  sigil.toml  vite.config.ts
.github/workflows/: ci.yml  publish.yml
_unused_legacy/components/: mod.sigil
_unused_legacy/legacy/: component.sigil  events.sigil  hooks.sigil  runtime.sigil  signals.sigil  vdom.sigil
_unused_legacy/router/: mod.sigil
_unused_legacy/state/: mod.sigil
_unused_legacy/theme/: mod.sigil  tokens.sigil
_unused_legacy/ui/: button.sigil  (+2 more)
crates/qliphoth-fx/: Cargo.toml
crates/qliphoth-fx/src/: aura.sigil  glitch.sigil  integration.sigil  lib.sigil  noise.sigil  particles.sigil  sigils.sigil
docs/: CHARTING-SIGIL.md  INFERNUM-BRIDGE-DESIGN.md  PARSER-EXTENSION-PLAN.md  WRITING-SIGIL.md
e2e/: docs-pages.e2e.spec.ts  home.e2e.spec.ts  navigation.e2e.spec.ts  performance.e2e.spec.ts  platform.e2e.spec.ts  playground.e2e.spec.ts  simulacra.e2e.spec.ts
examples/: counter.html  counter.sigil  counter_cross_platform.sigil  counter_simple.sigil  hello_vdom.sigil  html_test.html  html_test.sigil  qliphoth_demo.html  qliphoth_demo.sigil  simple_vdom.sigil  todo.sigil
harness/: index.html
runtime/: sigil_runtime.js  sigil_runtime_node.mjs  test-wasm.spec.ts  test.html  theme_test.html
runtime/native/wgpu/: Cargo.toml
runtime/native/wgpu/src/: clipboard_wayland.rs  clipboard_x11.rs  lib.rs
scripts/: build-wasm.sh  build.sh  dev.sh
src/: app.sigil  lib.sigil
tests/: mod.sg
(+1019 files in other folders)
