[package]
name = "qliphoth-fx"
version = "0.1.0"
edition = "2024"
description = "Visual effects library for Qliphoth - particles, glitch, aura, and dark magic"
license = "MIT"
repository = "https://github.com/Daemoniorum-LLC/qliphoth"

[lib]
path = "src/lib.sigil"

[dependencies]
qliphoth-core = { path = "../qliphoth-core" }
qliphoth-web = { path = "../qliphoth-web" }

[features]
default = ["full"]
full = ["particles", "glitch", "aura", "noise", "sigils"]
particles = []
glitch = []
aura = []
noise = []
sigils = []
