[package]
name = "qliphoth-native-wgpu"
version = "0.1.0"
edition = "2021"
description = "wgpu-based native backend for Qliphoth applications"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
winit = "0.30"
wgpu = "23"
pollster = "0.4"
glyphon = "0.7"              # Text rendering
cosmic-text = "0.12"         # Text layout
taffy = "0.7"                # Flexbox layout engine
once_cell = "1.19"
parking_lot = "0.12"
log = "0.4"                  # Error logging (silent returns, but logged)
bytemuck = { version = "1.14", features = ["derive"] }  # GPU buffer types
arboard = "3.4"                 # Cross-platform clipboard
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }  # Image encode/decode

[dev-dependencies]
serial_test = "3.1"

[features]
default = []
x11-backend = []  # Enable native X11 clipboard (Linux only)

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
